replace ImmutableMap.of with Map.of()